force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding</label>
    <pluralLabel>Customer Onboardings</pluralLabel>
    <nameField>
        <displayFormat>ONB-{00000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>