force-app/main/default/objects/Onboarding__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <label>Escalated</label>
    <description>Indicates whether the onboarding is currently marked for escalation.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>