force-app/main/default/objects/Onboarding__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <description>Customer Success maintained reason for onboarding escalation.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>