force-app/main/default/objects/Onboarding__c/fields/Escalation_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Triggered__c</fullName>
    <label>Escalation Triggered</label>
    <description>System-maintained flag preventing repeated automatic escalation for the same onboarding delay.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>