force-app/main/default/objects/Onboarding__c/fields/Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner__c</fullName>
    <label>Implementation Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboardings</relationshipName>
</CustomField>