force-app/main/default/objects/Onboarding__c/fields/Initial_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Data_Received__c</fullName>
    <label>Initial Data Received</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>