force-app/main/default/objects/Onboarding__c/fields/Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Date__c</fullName>
    <label>Kickoff Date</label>
    <type>Date</type>
</CustomField>