force-app/main/default/objects/Onboarding__c/fields/Kickoff_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Task_Created__c</fullName>
    <label>Kickoff Task Created</label>
    <description>Internal flag to prevent duplicate kickoff preparation tasks.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>