force-app/main/default/objects/Onboarding__c/fields/Missing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Missing_Requirements__c</fullName>
    <label>Missing Requirements</label>
    <type>Text</type>
    <formula>IF(TEXT(Status__c) == "Kickoff Completed", "Completed",
  IF(
    AND(Contract_Signed__c, Welcome_Email_Sent__c, Initial_Data_Received__c, NOT(ISBLANK(Kickoff_Date__c)), NOT(ISBLANK(Implementation_Owner__c))),
    "All requirements met!",
    IF(NOT(Contract_Signed__c), "Contract Signed; ", "") &amp;
    IF(NOT(Welcome_Email_Sent__c), "Welcome Email Sent; ", "") &amp;
    IF(NOT(Initial_Data_Received__c), "Initial Data Received; ", "") &amp;
    IF(ISBLANK(Kickoff_Date__c), "Kickoff Date Missing; ", "") &amp;
    IF(ISBLANK(Implementation_Owner__c), "Implementation Owner Missing; ", "")
  )
)</formula>
</CustomField>