force-app/main/default/objects/Onboarding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready for Kickoff</fullName>
            </value>
            <value>
                <fullName>Kickoff Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>