force-app/main/default/objects/Onboarding__c/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <label>Welcome Email Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>